tests/test_assets/semantic/invalid/arrays/index_out_of_bounds.expected
semantic error at line 12: array index out of bounds
semantic error at line 18: array index out of bounds
semantic error at line 24: array index out of bounds
3 semantic errors generated.
